[tool.poetry]
name = "tg-support"
version = "0.1.0"
description = ""
authors = ["IlyaGrebenschikov  <ilushagr22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.109.2"}
aiohttp = "^3.9.3"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
